# playground

./: .gitignore  index.html  package-lock.json  package.json
rust/can-parser/: Cargo.toml  README.md  test.ps1
rust/can-parser/src/: client.rs  main.rs
rust/develop_tools/: .gitignore  Cargo.toml  build.rs
rust/develop_tools/src/: err_to_console.rs  err_to_console_by_stdout.rs  main.rs  to_unix_sys_log.rs
rust/develop_tools/src/builder/: custom_link_c.rs  link_c.rs  link_cpp.rs  main.rs
rust/develop_tools/src/debug/: contain_timestamp_in_log.rs  custom_env.rs  custom_logger.rs  log_to_console.rs  log_to_file.rs  main.rs  module_level_log.rs
rust/develop_tools/src/version_control/: check_prerelease.rs  check_version_compatibility.rs  main.rs  parse.rs  parse_complex_str.rs  specific_version.rs
rust/encode/: Cargo.toml
rust/encode/.cargo/: config.toml
rust/encode/src/character_set/: base64.rs  hexupper.rs  main.rs  url_encode.rs  x_www_form_urlencode.rs
rust/encode/src/resolve_csv/: convert_cvs.rs  deserialize_csv.rs  deserialize_csv_2.rs  filter_csv.rs  invalid_csv.rs  main.rs  read_csv.rs  serialize_record_to_csv.rs  serialize_to_csv.rs
rust/encode/src/structuring/: deser_json.rs  deser_toml.rs  deser_toml_custom.rs  io_number_lowwer_order.rs  main.rs
rust/science_calculate/: Cargo.toml
rust/science_calculate/.cargo/: config.toml
rust/science_calculate/src/bigint/: main.rs
rust/science_calculate/src/complex/: complex_addition.rs  complex_of_math_fn.rs  create_complex.rs  main.rs
rust/science_calculate/src/linear_algebra/: main.rs  matrix_addition.rs  matrix_deserialize.rs  matrix_inversion.rs  matrix_multiplication.rs  matrix_multiplication2.rs  vector_comparison.rs  vector_norm.rs
rust/science_calculate/src/statistics/: main.rs  mean.rs  median.rs  mode.rs  std_deviation.rs
rust/science_calculate/src/trigonometry/: calculate_sides_length.rs  distance_between_two_point.rs  main.rs  tan_eq_sin_divide_cos.rs
rust/web_programing/: Cargo.toml
rust/web_programing/.cargo/: config.toml
rust/web_programing/src/URL/: creat_base_url.rs  creat_url_from_baseurl.rs  deserialize_url.rs  main.rs  parse_url.rs  remove_some_params.rs
rust/web_programing/src/client/: create_and_delete_gist.rs  custom_header.rs  download.rs  get_async.rs  get_sync.rs  is_source_exist.rs  main.rs  pagination_by_rest_ful.rs  partial_download.rs  query_github_api.rs  rate_limit_api.rs  send_file_to_paste_rs.rs
rust/web_programing/src/extra_url/: detect_dead_link.rs  extra_unique_url.rs  from_html.rs  main.rs
rust/web_programing/src/medium_type/: get_mime.rs  main.rs  (+2 more)
(+214 files in other folders)
