[package]
name = "develop_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "debug"
path = "src/debug/main.rs"

[[bin]]
name = "version_control"
path = "src/version_control/main.rs"

[[bin]]
name = "builder"
path = "src/builder/main.rs"


[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
log4rs = "1.3.0"
semver = "1.0.26"

[build-dependencies]
cc = "1.2.35"
