[package]
name = "encode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "character_set"
path = "src/character_set/main.rs"

[[bin]]
name = "resolve_csv"
path = "src/resolve_csv/main.rs"

[[bin]]
name = "structuring"
path = "src/structuring/main.rs"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
csv = "1.3.1"
data-encoding = "2.9.0"
percent-encoding = "2.3.2"
serde = "1.0.219"
serde_json = "1.0.143"
toml = "0.9.5"
url = "2.5.7"
