[package]
name = "science_calculate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linear_algebra"
path = "src/linear_algebra/main.rs"

[[bin]]
name = "trigonometry"
path = "src/trigonometry/main.rs"

[[bin]]
name = "complex"
path = "src/complex/main.rs"

[[bin]]
name = "statistics"
path = "src/statistics/main.rs"

[[bin]]
name = "bigint"
path = "src/bigint/main.rs"

[dependencies]
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
ndarray = "0.16.1"
num = "0.4.3"
serde_json = "1.0.145"
