[package]
name = "web_programing"
version = "0.1.0"
edition = "2024"

[[bin]]
name="client"
path="src/client/main.rs"

[[bin]]
name="extra_url"
path="src/extra_url/main.rs"

[[bin]]
name="medium_type"
path="src/medium_type/main.rs"

[[bin]]
name="URL"
path="src/URL/main.rs"

[dependencies]
lazy_static = "1.5.0"
mime = "0.3.17"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
select = "0.6.1"
serde = "1.0.226"
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "1.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.7"
